--- a/index.html
+++ b/index.html
@@ -5,30 +5,16 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- 검색 관련 메타태그 -->
-	<meta name="author" content="제작자(개발자)" />
-	<meta name="keywords" content="검색 키워드" />
-	<meta name="copyright" content="저작권자(개발자 또는 업체명)" />
-	<meta name="description" content="홈페이지 설명 문구">
-	<meta name="subject" content="주제">
-	<!--오픈그래프-->
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="홈페이지 타이틀">
-	<meta property="og:description" content="홈페이지 설명 문구">
-	<meta property="og:site_name" content="홈페이지 이름">
-	<meta property="og:url" content="홈페이지 url" />
-
-	<!-- 사파리 전화번호 링크 제거-->
-	<meta name="format-detection" content="telephone=no" />
+	<meta name="author" content="nixpluvia" />
+	<meta name="keywords" content="Image Player, ImgPlayer" />
+	<meta name="copyright" content="nixpluvia" />
+	<meta name="subject" content="Image Player">
 
 	<title>Image Player</title>
 
-	<!-- 기본 세팅 -->
-	<link rel="stylesheet" type="text/css" href="resources/wis-layout/css/common.css" />
-	<link rel="stylesheet" type="text/css" href="resources/wis-layout/css/imagePlayer.css" />
-
-	<script src="resources/wis-layout/js/imagePlayer.js" type="text/javascript"></script>
-	<!-- //기본 세팅 -->
-
+	<link rel="stylesheet" type="text/css" href="resources/css/common.css" />
+	<link rel="stylesheet" type="text/css" href="resources/css/imagePlayer.css" />
+	<script src="resources/js/imagePlayer.js" type="text/javascript"></script>
 </head>
 
 <body>
